# rust-mcp-universal

./: .gitignore  AGENTS.global.example.md  AGENTS.local.example.md  AGENTS.md  Cargo.toml  QUALITY_FOLLOWUPS.md  README.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: args.rs  error.rs  main.rs  output.rs  validation.rs
crates/cli/src/commands/: indexing.rs  maintenance.rs  mod.rs  modes.rs  preflight.rs  quality_hotspots.rs  quality_snapshot.rs  query.rs  sensitive_data.rs  signal_memory.rs
crates/cli/tests/: cli_contract.rs
crates/cli/tests/cli_contract/: benchmark.rs  constraint_surface.rs  index_lifecycle.rs  investigation.rs  json_and_runtime.rs  maintenance.rs  navigation.rs  navigation_python.rs  preflight.rs  quality_hotspots.rs  quality_matrix.rs  quality_snapshot.rs
crates/core/: Cargo.toml
crates/core/resources/: ignore_patterns.txt
crates/core/src/: artifact_fingerprint.rs  benchmark_compare.rs  db_store.rs  default_index_profile.rs  embedding_backend.rs  engine.rs  engine_brief.rs  engine_quality.rs  engine_status.rs  graph.rs  index_scope_meta.rs  lib.rs  model.rs  privacy.rs  quality.rs  query_profile.rs  rebuild_lock.rs  report.rs  rollout.rs  search_db.rs  search_db_tests.rs  search_db_unicode.rs  security.rs  signal_memory.rs  text_utils.rs  utils.rs  vector_rank.rs
crates/core/src/benchmark_compare/: metrics.rs  parsing.rs  payload.rs  thresholds.rs
crates/core/src/db_store/: cleanup.rs  config.rs  metadata.rs  tests.rs
crates/core/src/engine/: benchmark.rs  chunks.rs  compatibility.rs  context.rs  indexing.rs  investigation.rs  lifecycle.rs  maintenance.rs  navigation.rs  preflight.rs  preview.rs  query.rs  readiness.rs  schema.rs  schema_quality_tests.rs  schema_tests.rs  storage.rs  tests.rs  tests_quality.rs
crates/core/src/engine_brief/: repair.rs
crates/core/src/engine_quality/: hotspots.rs  metrics.rs  query.rs  refresh.rs  scope.rs  snapshot.rs  status.rs  structural.rs
crates/core/src/graph/: common.rs  (+10 more)
crates/core/tests/: engine_contracts.rs  java_navigation.rs  python_navigation.rs  python_navigation_contracts.rs  shared_store_env.rs  typescript_navigation.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  path_input.rs  rpc_tools.rs  rpc_tools_tests.rs  rpc_tools_tests_helpers.rs  state.rs
crates/mcp-server/tests/: stdio_e2e.rs
(+586 files in other folders)
