[workspace]
members = [
  "crates/core",
  "crates/cli",
  "crates/mcp-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Zaikana"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
walkdir = "2.5"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
rmcp = { version = "0.6", features = ["transport-io"] }
fs2 = "0.4"
ignore = "0.4"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
