[package]
name = "rmu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
walkdir.workspace = true
fs2.workspace = true
ignore.workspace = true
oxc_allocator = "0.75.0"
oxc_ast = "0.75.0"
oxc_ast_visit = "0.75.0"
oxc_parser = "0.75.0"
oxc_span = "0.75.0"
oxc_syntax = "0.75.0"
