[package]
name = "rmu-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
rmu-core = { path = "../core" }
time.workspace = true

[dev-dependencies]
rusqlite.workspace = true
